# image-cleaner-action

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  Pipfile  README.md  README_untagged.md  action.yml  main.py  main_ephemeral.py  main_untagged.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  codeql.yml  lint.yml
ephemeral/: README.md  action.yml
github/: __init__.py  base.py  branches.py  packages.py  pullrequest.py  ratelimit.py  urls.py  utils.py
github/models/: README.md  branch.py  package.py  pullrequest.py  ratelimit.py
regtools/: images.py  models.py
src/image_cleaner_action/: __init__.py
tests/: conftest.py  test_branches.py  test_packages.py  test_pullrequest.py  test_ratelimit.py
untagged/: README.md  action.yml
utils/: __init__.py
version/: __init__.py
