[project]
name = "image-cleaner-action"
version = "0.8.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[brotli,http2]>=0.27.0",
    "github-action-utils>=1.1.0",
    "typer-slim>=0.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# https://docs.astral.sh/ruff/settings/
fix = true
line-length = 110
respect-gitignore = true
target-version = "py311"
output-format = "grouped"
show-fixes = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
extend-select = ["F", "E", "W", "I", "UP", "COM", "EXE", "ISC", "ICN", "G201", "INP", "PIE", "RSE", "SIM", "TID", "PLC", "PLE", "RUF", "PTH"]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
force-single-line = true
