[project]
name = "image-cleaner-action"
version = "0.10.0"
description = "Tools to cleanup old ghcr.io images when the source is removed"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "github-action-utils>=1.1",
  "httpx[brotli,http2]>=0.28",
]

[tool.ruff]
target-version = "py312"
line-length = 110
respect-gitignore = true
# https://docs.astral.sh/ruff/settings/
fix = true
show-fixes = true

output-format = "grouped"
# https://docs.astral.sh/ruff/rules/
lint.extend-select = [
  "COM",
  "E",
  "EXE",
  "F",
  "G201",
  "I",
  "ICN",
  "INP",
  "ISC",
  "PIE",
  "PLC",
  "PLE",
  "PTH",
  "RSE",
  "RUF",
  "SIM",
  "TID",
  "UP",
  "W",
]
# https://docs.astral.sh/ruff/settings/#lintisort
lint.isort.force-single-line = true

[tool.uv]
dev-dependencies = [ "ruff", "pre-commit", "pre-commit-uv", "mypy" ]
